--- a/TaskManager/bin/view/TaskView.fxml
+++ b/TaskManager/bin/view/TaskView.fxml
@@ -6,30 +6,30 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="200.0" minWidth="200.0" prefHeight="369.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskViewController">
+<AnchorPane minHeight="200.0" minWidth="200.0" prefHeight="369.0" prefWidth="800.0" styleClass="background" stylesheets="@../../bin/view/App.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskViewController">
    <children>
-      <Label fx:id="firstNameLabel" layoutX="502.0" layoutY="25.0" prefHeight="17.0" prefWidth="193.0" text="Nombre" AnchorPane.rightAnchor="105.0" />
+      <Label fx:id="firstNameLabel" layoutX="502.0" layoutY="25.0" prefHeight="21.0" prefWidth="225.0" text="Nombre" AnchorPane.rightAnchor="73.0" />
       <AnchorPane minHeight="100.0" minWidth="100.0" prefHeight="347.0" prefWidth="193.0" AnchorPane.bottomAnchor="22.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button layoutX="42.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleNewProject" text="Crear Proyecto" AnchorPane.rightAnchor="56.0" />
-            <Button layoutX="50.0" layoutY="250.0" mnemonicParsing="false" onAction="#handleTaskView" text="Vista Tareas" AnchorPane.bottomAnchor="72.0" AnchorPane.rightAnchor="64.0" />
-            <Button layoutX="37.0" layoutY="121.0" mnemonicParsing="false" onAction="#handleTasksInProject" text="Tareas asociadas" AnchorPane.rightAnchor="51.0" />
-            <Button layoutX="33.0" layoutY="168.0" mnemonicParsing="false" onAction="#handleDeleteProject" prefHeight="25.0" prefWidth="114.0" text="Eliminar Proyecto" AnchorPane.rightAnchor="46.0" />
-            <Button layoutX="41.0" layoutY="78.0" mnemonicParsing="false" onAction="#handleEditProject" prefHeight="25.0" prefWidth="97.0" text="Editar Proyecto" AnchorPane.rightAnchor="55.0" />
-            <Button layoutX="50.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleDashboard" prefHeight="25.0" prefWidth="79.0" text="Dashboard" AnchorPane.bottomAnchor="22.0" AnchorPane.rightAnchor="64.0" />
+            <Button layoutX="21.0" layoutY="34.0" mnemonicParsing="false" onAction="#handleNewProject" style="-fx-background-color: black; -fx-border-color: black;" text="Crear Proyecto" AnchorPane.rightAnchor="28.0" />
+            <Button layoutX="27.0" layoutY="242.0" mnemonicParsing="false" onAction="#handleTaskView" style="-fx-background-color: black; -fx-border-color: black;" text="Vista Tareas" AnchorPane.bottomAnchor="72.0" AnchorPane.rightAnchor="41.0" />
+            <Button layoutX="14.0" layoutY="121.0" mnemonicParsing="false" onAction="#handleTasksInProject" style="-fx-background-color: black; -fx-border-color: black;" text="Tareas asociadas" AnchorPane.rightAnchor="22.0" />
+            <Button layoutX="14.0" layoutY="164.0" mnemonicParsing="false" onAction="#handleDeleteProject" prefHeight="33.0" prefWidth="165.0" style="-fx-background-color: black; -fx-border-color: black;" text="Eliminar Proyecto" AnchorPane.rightAnchor="14.0" />
+            <Button layoutX="14.0" layoutY="78.0" mnemonicParsing="false" onAction="#handleEditProject" prefHeight="33.0" prefWidth="157.0" style="-fx-background-color: black; -fx-border-color: black;" text="Editar Proyecto" AnchorPane.rightAnchor="22.0" />
+            <Button layoutX="27.0" layoutY="291.0" mnemonicParsing="false" onAction="#handleDashboard" prefHeight="33.0" prefWidth="125.0" style="-fx-background-color: black; -fx-border-color: black;" text="Dashboard" AnchorPane.bottomAnchor="23.0" AnchorPane.rightAnchor="41.0" />
          </children>
       </AnchorPane>
-      <Label fx:id="priorityLabel" layoutX="619.0" layoutY="152.0" prefHeight="17.0" prefWidth="54.0" text="Prioridad" AnchorPane.rightAnchor="127.0" />
-      <Label fx:id="contextLabel" layoutX="618.0" layoutY="205.0" prefHeight="17.0" prefWidth="128.0" text="Contexto" AnchorPane.rightAnchor="54.0" />
-      <Label fx:id="deadlineLabel" layoutX="618.0" layoutY="314.0" prefHeight="17.0" prefWidth="128.0" text="Deadline" AnchorPane.rightAnchor="54.0" />
+      <Label fx:id="priorityLabel" layoutX="619.0" layoutY="152.0" prefHeight="21.0" prefWidth="108.0" text="Prioridad" AnchorPane.rightAnchor="106.0" />
+      <Label fx:id="contextLabel" layoutX="618.0" layoutY="205.0" prefHeight="21.0" prefWidth="157.0" text="Contexto" AnchorPane.rightAnchor="54.0" />
+      <Label fx:id="deadlineLabel" layoutX="618.0" layoutY="314.0" prefHeight="21.0" prefWidth="157.0" text="Deadline" AnchorPane.rightAnchor="54.0" />
       <Label layoutX="502.0" layoutY="152.0" text="Prioridad" AnchorPane.rightAnchor="249.0" />
-      <Label layoutX="502.0" layoutY="314.0" prefHeight="17.0" prefWidth="54.0" text="Deadline" AnchorPane.rightAnchor="244.0" />
-      <Label layoutX="502.0" layoutY="205.0" text="Estado" AnchorPane.rightAnchor="262.0" />
-      <Label layoutX="502.0" layoutY="261.0" prefHeight="17.0" prefWidth="49.0" text="Inicio" AnchorPane.rightAnchor="249.0" />
-      <Label fx:id="inicioLabel" layoutX="618.0" layoutY="261.0" prefHeight="17.0" prefWidth="128.0" AnchorPane.rightAnchor="54.0" />
-      <AnchorPane layoutX="187.0" layoutY="5.0" prefHeight="299.0" prefWidth="237.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="187.0" AnchorPane.rightAnchor="376.0" AnchorPane.topAnchor="5.0">
+      <Label layoutX="489.0" layoutY="314.0" prefHeight="21.0" prefWidth="62.0" text="Deadline" AnchorPane.rightAnchor="249.0" />
+      <Label layoutX="502.0" layoutY="205.0" prefHeight="21.0" prefWidth="49.0" text="Estado" AnchorPane.rightAnchor="262.0" />
+      <Label layoutX="502.0" layoutY="261.0" prefHeight="21.0" prefWidth="62.0" text="Inicio" AnchorPane.rightAnchor="249.0" />
+      <Label fx:id="inicioLabel" layoutX="618.0" layoutY="261.0" prefHeight="21.0" prefWidth="157.0" AnchorPane.rightAnchor="54.0" />
+      <AnchorPane layoutX="187.0" layoutY="5.0" prefHeight="299.0" prefWidth="270.0" styleClass="label-bright" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="187.0" AnchorPane.rightAnchor="343.0" AnchorPane.topAnchor="5.0">
          <children>
-            <TableView fx:id="proyectTable" layoutX="45.0" layoutY="14.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="285.0" prefWidth="256.0" AnchorPane.bottomAnchor="-40.0" AnchorPane.leftAnchor="45.0" AnchorPane.rightAnchor="-45.0" AnchorPane.topAnchor="14.0">
+            <TableView fx:id="proyectTable" layoutY="14.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="285.0" prefWidth="256.0" styleClass="label-bright" AnchorPane.bottomAnchor="-40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
@@ -39,9 +39,9 @@
             </TableView>
          </children>
       </AnchorPane>
-      <ScrollPane layoutX="502.0" layoutY="74.0" maxHeight="48.0" maxWidth="207.0" prefHeight="48.0" prefViewportHeight="33.0" prefViewportWidth="207.0" prefWidth="207.0" AnchorPane.rightAnchor="91.0">
+      <ScrollPane layoutX="502.0" layoutY="74.0" maxHeight="48.0" maxWidth="225.0" prefHeight="48.0" prefViewportHeight="33.0" prefViewportWidth="207.0" prefWidth="225.0" AnchorPane.rightAnchor="73.0">
          <content>
-            <Label fx:id="descriptionLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" text="Descripcion" />
+            <Label fx:id="descriptionLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="46.0" prefWidth="673.0" styleClass="background" text="Descripcion" />
          </content>
       </ScrollPane>
    </children>
