--- a/TaskManager/src/view/ProjectEditDialog.fxml
+++ b/TaskManager/src/view/ProjectEditDialog.fxml
@@ -5,33 +5,35 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="286.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ProjectEditDialogController">
+<AnchorPane prefHeight="286.0" prefWidth="300.0" styleClass="background" stylesheets="@../../bin/view/App.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ProjectEditDialogController">
    <children>
-      <GridPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="211.0" prefWidth="292.0" AnchorPane.topAnchor="0.0">
+      <GridPane layoutX="4.0" layoutY="8.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="211.0" prefWidth="292.0" AnchorPane.topAnchor="8.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="137.0" minWidth="10.0" prefWidth="94.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="212.0" minWidth="10.0" prefWidth="198.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="75.0" minHeight="10.0" prefHeight="53.0" vgrow="ALWAYS" />
-          <RowConstraints maxHeight="86.0" minHeight="7.0" prefHeight="57.0" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="86.0" minHeight="10.0" prefHeight="53.0" vgrow="ALWAYS" />
+          <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="87.0" vgrow="ALWAYS" />
+          <RowConstraints maxHeight="125.0" minHeight="7.0" prefHeight="84.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="86.0" minHeight="5.0" prefHeight="10.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="98.0" minHeight="10.0" prefHeight="31.0" vgrow="ALWAYS" />
         </rowConstraints>
          <children>
-            <Label prefHeight="13.0" prefWidth="88.0" text=" Nombre" />
-            <Label prefHeight="17.0" prefWidth="85.0" text=" Descripcion" GridPane.rowIndex="1" />
-            <Label text=" Prioridad" GridPane.rowIndex="2" />
-            <TextField fx:id="firstNameField" GridPane.columnIndex="1" />
-            <TextField fx:id="descriptionField" prefHeight="27.0" prefWidth="198.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Label prefHeight="13.0" prefWidth="88.0" styleClass="label-bright" text=" Nombre" />
+            <Label prefHeight="17.0" prefWidth="85.0" styleClass="label-bright" text=" Descripcion" GridPane.rowIndex="1" />
+            <Label styleClass="label-bright" text=" Prioridad" GridPane.rowIndex="3" />
+            <TextField fx:id="firstNameField" prefHeight="37.0" prefWidth="166.0" style="-fx-background-color: black;" styleClass="label-bright" GridPane.columnIndex="1" />
+            <TextField fx:id="descriptionField" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: black;" styleClass="label-bright" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="198.0" minWidth="10.0" prefWidth="198.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="0.0" prefWidth="0.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="18.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="18.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label fx:id="priorityField" alignment="CENTER" prefHeight="17.0" prefWidth="197.0" textAlignment="CENTER" />
@@ -40,7 +42,7 @@
             </GridPane>
          </children>
       </GridPane>
-      <Button layoutX="120.0" layoutY="245.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="25.0" prefWidth="61.0" text="OK" />
-      <Button layoutX="197.0" layoutY="245.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="74.0" text="Cancelar" />
+      <Button layoutX="93.0" layoutY="245.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="33.0" prefWidth="88.0" style="-fx-background-color: black; -fx-border-color: black;" text="OK" />
+      <Button layoutX="191.0" layoutY="245.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: black; -fx-border-color: black;" text="Cancelar" />
    </children>
 </AnchorPane>
